#74 - Add support for the cast "::" operator (#81)
* #74 - Added castFunctionOperator property and DEFAULT_CAST_FUNCTION_HIBERNATE_OPERATOR constant [skip ci]

* #74 - Added castFunctionOperator and function register

* #74 - Updated README.md file [skip ci]

* #74 - Added tests case [skip ci]

* #74 - Added implementation [skip ci]

* #74 - Added tests case [skip ci]

* #74 - Added tests case [skip ci]

* #74 - Added implementation [skip ci]

* #74 - Fixed assertion [skip ci]

* #74 - Added tests case

* #74 - Added cast operator [skip ci]

* #74 - Added test case and implementation [skip ci]

* #74 - Added implementation